--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+
+footer{
+	background: #061a39 !important;
+}
+footer svg {
+	width:70px;
+		height:70px;
+}
 .bg-img{
   background-image: url('https://i.vgy.me/MKG5So.jpg');
 	background-repeat: no-repeat;
@@ -6,4 +14,17 @@
 	padding-bottom: 10rem;
 	
 	color: white;
+}
+
+
+.servicesItem::before {
+	content: 'Features';
+	display:block;
+	color:#F59E0B;
+	font-size: 1.125rem;
+	line-height: 1.75rem;
+	margin-bottom:1rem;
+	border-left:4px solid #f59e0b;
+	padding-left:1rem;
+	font-weight:700;
 }
